; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_block_dev.c_blkdev_read_iter.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_block_dev.c_blkdev_read_iter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kiocb = type { i64, %struct.file* }
%struct.file = type { i32 }
%struct.iov_iter = type { i32 }
%struct.inode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @blkdev_read_iter(%struct.kiocb* %0, %struct.iov_iter* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.kiocb*, align 8
  %5 = alloca %struct.iov_iter*, align 8
  %6 = alloca %struct.file*, align 8
  %7 = alloca %struct.inode*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.kiocb* %0, %struct.kiocb** %4, align 8
  store %struct.iov_iter* %1, %struct.iov_iter** %5, align 8
  %10 = load %struct.kiocb*, %struct.kiocb** %4, align 8
  %11 = getelementptr inbounds %struct.kiocb, %struct.kiocb* %10, i32 0, i32 1
  %12 = load %struct.file*, %struct.file** %11, align 8
  store %struct.file* %12, %struct.file** %6, align 8
  %13 = load %struct.file*, %struct.file** %6, align 8
  %14 = call %struct.inode* @bdev_file_inode(%struct.file* %13)
  store %struct.inode* %14, %struct.inode** %7, align 8
  %15 = load %struct.inode*, %struct.inode** %7, align 8
  %16 = call i64 @i_size_read(%struct.inode* %15)
  store i64 %16, i64* %8, align 8
  %17 = load %struct.kiocb*, %struct.kiocb** %4, align 8
  %18 = getelementptr inbounds %struct.kiocb, %struct.kiocb* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  store i64 %19, i64* %9, align 8
  %20 = load i64, i64* %9, align 8
  %21 = load i64, i64* %8, align 8
  %22 = icmp sge i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %34

24:                                               ; preds = %2
  %25 = load i64, i64* %9, align 8
  %26 = load i64, i64* %8, align 8
  %27 = sub nsw i64 %26, %25
  store i64 %27, i64* %8, align 8
  %28 = load %struct.iov_iter*, %struct.iov_iter** %5, align 8
  %29 = load i64, i64* %8, align 8
  %30 = call i32 @iov_iter_truncate(%struct.iov_iter* %28, i64 %29)
  %31 = load %struct.kiocb*, %struct.kiocb** %4, align 8
  %32 = load %struct.iov_iter*, %struct.iov_iter** %5, align 8
  %33 = call i32 @generic_file_read_iter(%struct.kiocb* %31, %struct.iov_iter* %32)
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %24, %23
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local %struct.inode* @bdev_file_inode(%struct.file*) #1

declare dso_local i64 @i_size_read(%struct.inode*) #1

declare dso_local i32 @iov_iter_truncate(%struct.iov_iter*, i64) #1

declare dso_local i32 @generic_file_read_iter(%struct.kiocb*, %struct.iov_iter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
